--- a/views/assignments/update.html
+++ b/views/assignments/update.html
@@ -7,15 +7,26 @@
 </ul>
 <div class="container-fluid">
 	<div class="row">
-		<div class="col-md-6">
+		<div class="col-md-4">
 			<h3>Edit Information</h3>
 			{{=form}}
 		</div>
-		<div class="col-md-6">
+		<div class="col-md-4">
 			<h3>Edit Deadlines</h3>
 			{{=delete_deadline_form}}
 			<h3>Create Deadline</h3>
 			{{=new_deadline_form}}
+		</div>
+		<div class="col-md-4">
+			{{	if problem_results: }}
+			<h3>Problem Results:</h3>
+
+			<a class="btn" href="{{=URL('assignments','update')}}?id={{=assignment.id}}">Cancel</a>
+			{{ else: }}
+			<h3>Problems in Assignment</h3>
+			<h3>Add Problems</h3>
+			{{=problem_query_form}}
+			{{ pass }}
 		</div>
 	</div>
 </div>
