--- a/views/assignments/update.html
+++ b/views/assignments/update.html
@@ -20,10 +20,11 @@
 		<div class="col-md-4">
 			{{	if problem_results: }}
 			<h3>Problem Results:</h3>
-
+			{{=problem_results_form}}
 			<a class="btn" href="{{=URL('assignments','update')}}?id={{=assignment.id}}">Cancel</a>
 			{{ else: }}
 			<h3>Problems in Assignment</h3>
+			{{=problems_delete_form}}
 			<h3>Add Problems</h3>
 			{{=problem_query_form}}
 			{{ pass }}
