--- a/views/assignments/detail.html
+++ b/views/assignments/detail.html
@@ -42,18 +42,18 @@
 			{{for row in students:}}
 			<li class="list-group-item">
 				{{ if student and student.id == row.id: }}
-				<span class="badge">{{=row.grade}}</span>
+				<span class="badge">{{=row.score}}</span>
 				<a href="{{=URL('assignments','detail')}}{{=page_args(student=None)}}">
 					<span class="glyphicon glyphicon-remove"></span>
 					{{=row.first_name}} {{=row.last_name}}
 				</a>
 				{{ else: }}
 				{{ if acid: }}
-				<span class="badge grade">{{=row.grade}}</span>
+				<span class="badge grade">{{=row.score}}</span>
 				<a class="gradable" data-acid="{{=acid}}" data-student-id="{{=row.id}}"  href="{{=URL('assignments','detail')}}{{=page_args(student=row)}}">{{=row.first_name}} {{=row.last_name}}</a>
 				<p class="comment">{{=row.comment}}</p>
 				{{ else: }}
-				<span class="badge">{{=row.grade}}</span>
+				<span class="badge">{{=row.score}}</span>
 				<a href="{{=URL('assignments','detail')}}{{=page_args(student=row)}}">{{=row.first_name}} {{=row.last_name}}</a>
 				{{ pass }}
 				{{ pass }}
@@ -72,7 +72,7 @@
 			{{for row in problems:}}
 			    <li class="list-group-item">
 			    	{{if student:}}
-					<span class="badge grade">{{=row.grade}}</span>
+					<span class="badge grade">{{=row.score}}</span>
 					<a class="gradable" data-acid="{{=row.acid}}" data-student-id="{{=student.id}}" href="{{=URL('assignments','detail')}}{{=page_args(student=student,acid=row.acid)}}">{{=row.acid}}</a>
 					<p class="comment">{{=row.comment}}</p>
 					{{else:}}
