added released grades code

--- a/views/assignments/detail.html
+++ b/views/assignments/detail.html
@@ -22,7 +22,7 @@
 	<li class="active"><a href="{{=URL('assignments','detail')}}?id={{=assignment.id}}">View</a></li>
 	<li><a href="{{=URL('assignments','update')}}?id={{=assignment.id}}">Edit</a></li>
 	<li><a href="{{=URL('assignments','grade')}}?id={{=assignment.id}}">Grade</a></li>
-	<li class="disabled"><a href="">Release Grades</a></li>
+	<li><a href="{{=URL('assignments','release_grades')}}?id={{=assignment.id}}">Release Grades</a></li>
 </ul>
 <div class="container-fluid">
 	<div class="row">
