--- a/views/assignments/detail.html
+++ b/views/assignments/detail.html
@@ -50,7 +50,7 @@
 				{{ else: }}
 				{{ if acid: }}
 				<span class="badge grade">{{=row.score}}</span>
-				<a class="gradable" data-acid="{{=acid}}" data-student-id="{{=row.id}}"  href="{{=URL('assignments','detail')}}{{=page_args(student=row)}}">{{=row.first_name}} {{=row.last_name}}</a>
+				<a class="gradable" data-acid="{{=acid}}" data-student-id="{{=row.username}}"  href="{{=URL('assignments','detail')}}{{=page_args(student=row)}}">{{=row.first_name}} {{=row.last_name}}</a>
 				<p class="comment">{{=row.comment}}</p>
 				{{ else: }}
 				<span class="badge">{{=row.score}}</span>
@@ -73,7 +73,7 @@
 			    <li class="list-group-item">
 			    	{{if student:}}
 					<span class="badge grade">{{=row.score}}</span>
-					<a class="gradable" data-acid="{{=row.acid}}" data-student-id="{{=student.id}}" href="{{=URL('assignments','detail')}}{{=page_args(student=student,acid=row.acid)}}">{{=row.acid}}</a>
+					<a class="gradable" data-acid="{{=row.acid}}" data-student-id="{{=student.username}}" href="{{=URL('assignments','detail')}}{{=page_args(student=student,acid=row.acid)}}">{{=row.acid}}</a>
 					<p class="comment">{{=row.comment}}</p>
 					{{else:}}
 					{{if acid==row.acid:}}
