--- a/views/assignments/detail.html
+++ b/views/assignments/detail.html
@@ -28,71 +28,43 @@
 	<div class="row">
 		<div class="col-md-6">
 			<h3>Students</h3>
-			<ul class="nav nav-pills">
-				<li {{if not selected_section:}}class="active"{{pass}}>
-					<a href="{{=URL('assignments','detail')}}{{=page_args(section_id=None)}}">All Students</a>
-				</li>
-				{{ for row in sections: }}
-				<li {{if selected_section==row.id:}}class="active"{{pass}}>
-					<a href="{{=URL('assignments','detail')}}{{=page_args(section_id=row.id)}}">{{=row.name}}</a>
-				</li>
-				{{ pass }}
-			</ul>
 			<ul class="list-group">
-			{{for row in scores:}}
+			{{for s in students:}}
+				{{ found = False }}
+				{{ for sc in scores: }}
+					{{ if sc.user.id == s.id: }}
+						{{ found = True}}
 				<li class="list-group-item">
-					{{ if student and student.id == row.user.id: }}
-					<span class="badge">{{=row.score}}</span>
-					<a href="{{=URL('assignments','detail')}}{{=page_args(student=None)}}">
-						<span class="glyphicon glyphicon-remove"></span>
-						{{=row.user.first_name}} {{=row.user.last_name}}
+					<span class="badge">{{=sc.points}}</span>
+					<a href="{{=URL('assignments','detail')}}{{=page_args(student=s)}}">
+						{{=s.first_name}} {{=s.last_name}}
 					</a>
-					{{ else: }}
-					{{ if acid: }}
-					<span class="badge grade">{{=row.score}}</span>
-					<a class="gradable" data-acid="{{=acid}}" data-student-id="{{=row.user.username}}"  href="{{=URL('assignments','detail')}}{{=page_args(student=row.user)}}">{{=row.user.first_name}} {{=row.user.last_name}}</a>
-					<p class="comment">{{=row.comment}}</p>
-					{{ else: }}
-					<span class="badge">{{=row.score}}</span>
-					<a href="{{=URL('assignments','detail')}}{{=page_args(student=row.user)}}">{{=row.user.first_name}} {{=row.user.last_name}}</a>
-					{{ pass }}
-					{{ pass }}
 				</li>
+					{{ pass }}
+				{{ pass }}
+				{{ if not found: }}
+				<li class="list-group-item">{{=s.first_name}} {{=s.last_name}}</li>
+				{{ pass }}
 			{{pass}}
 			</ul>
 		</div>
 		<div class="col-md-6">
-			{{if student:}}
-			<h3>Problems for {{=student.first_name}} {{=student.last_name}}</h3>
-			{{else:}}
 			<h3>Problems</h3>
-			{{pass}}
-			{{if len(problems) > 0:}}
 			<ul class="list-group">
-			{{for row in problems:}}
-			    <li class="list-group-item">
-			    	{{if student:}}
-					<span class="badge grade">{{=row.score}}</span>
-					<a class="gradable" data-acid="{{=row.acid}}" data-student-id="{{=student.username}}" href="{{=URL('assignments','detail')}}{{=page_args(student=student,acid=row.acid)}}">{{=row.acid}}</a>
-					<p class="comment">{{=row.comment}}</p>
-					{{else:}}
-					{{if acid==row.acid:}}
-					<a href="{{=URL('assignments','detail')}}{{=page_args(acid=None)}}">
-						<span class="glyphicon glyphicon-remove"></span>
-						{{=row.acid}}
-					</a>
-					{{else:}}
-					<a href="{{=URL('assignments','detail')}}{{=page_args(acid=row.acid)}}">{{=row.acid}}</a>
-					{{pass}}
-					{{pass}}
-				</li>  
-				{{pass}}
-			</ul>
-			{{else:}}
-			<div class="alert alert-info">
-				<p>No Problems</p>
-			</div>
+			{{for p in problems:}}
+				{{ found = False }}
+				{{ for sc in scores: }}
+					{{ if sc.acid == p.acid: }}
+						{{ found = True }}
+						<li class="list-group-item">
+							<span class="badge">{{=sc.points}}</span>
+							<a href="#">{{=p.acid}}</a>
+						</li>						
+					{{ pass }}
+				{{ pass }}
+				<li class="list-group-item">{{=p.acid}}</li>
 			{{pass}}
+			</ul>
 		</div>
 	</div>
 </div>
