got assignments index working again

--- a/views/assignments/index.html
+++ b/views/assignments/index.html
@@ -15,10 +15,10 @@
 		<div id="assignment-{{=row.assignments.id}}" class="panel-collapse collapse">
 	      <div class="panel-body">
 	      	<ul class="list-group">
-	      	{{ problems = row.assignments.problems(student)}}
+	      	{{ problems = row.assignments.scores(user = student)}}
 	      	{{for problem in problems:}}
 	      		<li class="list-group-item">
-	      			<span class="badge">{{=problem.score}}</span>
+	      			<span class="badge">{{=problem.points}}</span>
 	      			<h4>{{=problem.acid}}</h4>
 	      			{{if problem.comment:}}
 	      			<p>{{=problem.comment}}</p>
