--- a/views/assignments/index.html
+++ b/views/assignments/index.html
@@ -1,7 +1,9 @@
 {{extend 'layout.html'}}
 <h1>{{=student.first_name}} {{=student.last_name}}</h1>
 <p class="grade"><strong>{{=student.points_total}} points</strong> of {{=student.points_possible}} points (or {{=student.points_percentage}}%)</p>
+{{ if last_action: }}
 <p class="last_action"><em>Last Action: {{=last_action.timestamp}}</em></p>
+{{ pass }}
 <h2>Assignments</h2>
 <ul class="nav nav-pills">
 	<li {{if not assignment_type:}}class="active"{{pass}}>
