--- a/views/assignments/index.html
+++ b/views/assignments/index.html
@@ -6,25 +6,25 @@
 		<p class="last_action"><em>Last Action: {{=last_action.timestamp}}</em></p>
 		{{ pass }}
 	</div>
-	<div class="col-md-4" style="text-align:center;">
+	<div class="col-md-4" style="text-align:center;">Course Points
 		<div class="row">
-			<div class="col-md-4">Current Points</div>
-			<div class="col-md-4">Projected Points</div>
-			<div class="col-md-4">Maximum Points</div>
+			<div class="col-md-4">Current</div>
+			<div class="col-md-4">Projected</div>
+			<div class="col-md-4">Max Attainable</div>
 		</div>
 		<div class="row">
-			<div class="col-md-4"><span class="hidden">Current Points:</span> {{=grade.current()}}</div>
-			<div class="col-md-4"><span class="hidden">Current Points:</span> {{=grade.projected()}}</div>
-			<div class="col-md-4"><span class="hidden">Current Points:</span> {{=grade.max()}}</div>
+			<div class="col-md-4"><span class="hidden">Current Points:</span> {{=pct2pts(grade.current())}}</div>
+			<div class="col-md-4"><span class="hidden">Current Points:</span> {{=pct2pts(grade.projected())}}</div>
+			<div class="col-md-4"><span class="hidden">Current Points:</span> {{=pct2pts(grade.max())}}</div>
 		</div>
 	</div>
 </div>
 <div class="panel-group" id="assignments">
 {{ for type in types: }}
-	<h2>{{=type.name}}</h2>
+	<h2>{{=type.name}} ({{=int(type.weight * 100)}} course points)</h2>
 	<div class="row">
 		<div class="col-md-8">
-			<p class="grade"><strong>{{=type.grade.points}} points</strong> of {{=type.grade.total}} points (or {{=type.grade.percent()}})</p>
+<p class="grade"><strong>{{=type.grade.points()}} points</strong> of {{=type.grade.assignment_points()}} points (or {{=type.grade.percent()}})</p>
 			{{ type_found = False }}
 			{{for row in assignments:}}
 				{{ if row.assignments.assignment_type == type.id: }}
@@ -39,7 +39,7 @@
 				<div id="assignment-{{=row.assignments.id}}" class="panel-collapse collapse">
 			      <div class="panel-body">
 			      	<ul class="list-group">
-			      	{{ problems = row.assignments.scores(user = student)}}
+               	{{ problems = row.assignments.scores(user = student)}}
 			      	{{for problem in problems:}}
 			      		<li class="list-group-item">
 			      			<span class="badge">{{=problem.points}}</span>
@@ -64,9 +64,9 @@
 		</div>
 		<div class="col-md-4" style="text-align:center;">
 			<div class="row">
-				<div class="col-md-4"><span class="hidden">Current Points:</span> {{=type.grade.current()}}</div>
-				<div class="col-md-4"><span class="hidden">Current Points:</span> {{=type.grade.projected()}}</div>
-				<div class="col-md-4"><span class="hidden">Current Points:</span> {{=type.grade.max()}}</div>
+				<div class="col-md-4"><span class="hidden">Current Points:</span> {{=pct2pts(type.grade.current())}}</div>
+				<div class="col-md-4"><span class="hidden">Current Points:</span> {{=pct2pts(type.grade.projected())}}</div>
+				<div class="col-md-4"><span class="hidden">Current Points:</span> {{=pct2pts(type.grade.max())}}</div>
 			</div>
 		</div>
 	</div>
