added form-control style

--- a/views/assignments/detail.html
+++ b/views/assignments/detail.html
@@ -115,9 +115,9 @@
 					<h4 class="modal-title"></h4>
 				</div>
 				<div class="modal-body">
-					<form>
+					<form class="form-horizontal">
 						<label for="csv-entry">Enter CSV Text (email, points)</label>
-						<textarea id="csv-entry" name="csv-entry"></textarea>
+						<textarea id="csv-entry" name="csv-entry" class="form-control"></textarea>
 						<input type="submit" value="match-grades" class="btn btn-primary" />
 					</form>
 				</div>
