small wording change

--- a/views/assignments/index.html
+++ b/views/assignments/index.html
@@ -42,7 +42,7 @@
 			      	{{ problems = row.assignments.scores(user = student)}}
 			      	{{ completed_problems = [p for p in problems if p.points > 0]}}
 			      	{{ if type.grade_type == 'use':}}
-			      	<p>You completed {{=len(completed_problems)}} problems. You needed to do {{=row.assignments.threshold}} to get full credit.</p>
+			      	<p>You completed {{=len(completed_problems)}} activities. You needed to do {{=row.assignments.threshold}} to get full credit.</p>
 			      	{{ pass }}
 			      	<ul class="list-group">
 			      	{{for problem in problems:}}
