--- a/views/assignments/index.html
+++ b/views/assignments/index.html
@@ -42,6 +42,8 @@
 			      	{{ problems = row.assignments.scores(user = student)}}
 			      	{{ completed_problems = [p for p in problems if p.points > 0]}}
 			      	{{ if type.grade_type == 'use':}}
+                  {{ time = row.assignments.time(user=student)}}
+			      	<p>You spent {{= "%.1f" % (time/60.0)}} minutes on activities related to preparing for this session.</p>
 			      	<p>You completed {{=len(completed_problems)}} activities. You needed to do {{=row.assignments.threshold}} to get full credit.</p>
 			      	{{ pass }}
 			      	<ul class="list-group">
