--- a/views/assignments/admin.html
+++ b/views/assignments/admin.html
@@ -15,6 +15,7 @@
 		<div class="col-md-6">
 			<h2>Assignments</h2>
 			<a class="btn btn-default" href="{{=URL('assignments','create')}}">Create Assignment</a>
+			<a class="btn btn-default" href="{{=URL('assignments','download')}}">Download</a>
 			<ul class="list-group">
 			{{for row in assignments:}}
 			    <li class="list-group-item">
