--- a/views/sections/update.html
+++ b/views/sections/update.html
@@ -1,5 +1,5 @@
 {{extend 'layout.html'}}
-<a href="sections_list">All Sections</a>
+<a href="{{=URL('sections','index')}}">All Sections</a>
 <h1>Section: {{=section.name}}</h1>
 <h3>Users in Section</h3>
 <ul>
@@ -10,4 +10,4 @@
 <h2>Update Users in Section</h2>
 {{=bulk_email_form}}
 <h2>Delete Section</h2>
-<a href="sections_delete?id={{=section.id}}">Delete {{=section.name}}, click here.</a>
+<a href="{{=URL('sections','delete')}}?id={{=section.id}}">Delete {{=section.name}}, click here.</a>
