--- a/views/assignments/admin.html
+++ b/views/assignments/admin.html
@@ -5,8 +5,8 @@
 		<div class="col-md-6">
 			<h2>Students</h2>
 			{{ if len(sections) > 0:}}
-			<form class="form-inline row-fluid" action="" method="get">
-				<div class="form-group col-md-10">
+			<form class="form-inline" action="" method="get">
+				<div class="form-group">
 					<label for="sectionSelect" class="hidden">Filter Students</label>
 					<select id="sectionSelect" class="form-control" name="section_id">
 						<option value="">All Students</option>
@@ -15,7 +15,7 @@
 					{{pass}}
 					</select>
 				</div>
-				<div class="form-group col-md-2">
+				<div class="form-group">
 					<input class="btn" type="submit" value="Go" />
 				</div>
 			</form>
