--- a/views/assignments/detail.html
+++ b/views/assignments/detail.html
@@ -29,6 +29,26 @@
 	<div class="row">
 		<div class="col-md-6">
 			<h3>Students</h3>
+			{{ if len(sections) > 0:}}
+			<form class="form-inline" action="{{=URL('assignments','detail')}}" method="get">
+				<input type="hidden" name="id" value="{{=assignment.id}}" />
+				{{ if selected_acid:}}
+				<input type="hidden" name="acid" value="{{=selected_acid}}" />
+				{{pass}}
+				<div class="form-group">
+					<label for="sectionSelect" class="hidden">Filter Students</label>
+					<select id="sectionSelect" class="form-control" name="section_id">
+						<option value="">All Students</option>
+					{{for section in sections:}}
+						<option {{ if section_id == section.id:}}selected="selected"{{pass}} value="{{=section.id}}">{{=section.name}}</option>
+					{{pass}}
+					</select>
+				</div>
+				<div class="form-group">
+					<input class="btn" type="submit" value="Go" />
+				</div>
+			</form>
+			{{ pass }}
 			<ul class="list-group">
 			{{for s in students:}}
 				{{ found = False }}
