--- a/views/layout.html
+++ b/views/layout.html
@@ -116,16 +116,10 @@
               <li><span class='loggedinuser'>Not logged in</span></li>
             {{ pass }}
             <li class="divider"></li>
-            <li><a href='/{{=request.application}}/mygroup/schedule'>Group Schedule</a></li>
-            <li><a href='/{{=request.application}}/mygroup/newschedule'>Schedule New Chapter</a></li>
-            <li><a href='/{{=request.application}}/mygroup/manageGroup'>Manage Group</a></li>
-            <li class="divider"></li>
             <li><a href='/{{=request.application}}/admin/index'>Instructor's Page</a></li>
             <li class="divider"></li>
             {{ if auth.user: }}
-              <li><a href="/{{=request.application}}/default/user/profile">Edit Profile</a>
-              <li><a href="/{{=request.application}}/default/user/change_password">Change Password</a>
-              <li><a href='{{=URL('assignments','index')}}'>Progress Page</a></li>              
+              <li><a href='{{=URL('assignments','index')}}'>Progress Page</a></li>
               <li class='loginout'><a href='{{=URL("default", "user/logout")}}'>Log Out</a></li>
             {{ else: }}
               <li><a href='{{=URL("default", "user/register")}}'>Register</a></li>
@@ -161,12 +155,9 @@
 
         <!-- open library dropdown -->
         <li class="dropdown">
-          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Open Library<b class="caret"></b></a>
+          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Books<b class="caret"></b></a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="/{{=request.application}}/static/thinkcspy/index.html">How To Think Like a Computer Scientist</a></li>
-            <li><a href="/{{=request.application}}/static/pythonds/index.html">Problem Solving With Algorithms and Data Structures</a></li>
-            <li><a href="/{{=request.application}}/static/java4python/index.html">Java For Python Programmers</a></li>
-            <li><a href="/{{=request.application}}/static/JavaReview/index.html">Java Review for AP CS A Exam</a></li>            
+            <li><a href="/{{=request.application}}/static/pip/index.html">Programs, Information, and People</a></li>
           </ul>
         </li>
 
@@ -183,7 +174,7 @@
 
         <li class="divider-vertical"></li>
 
-        <!-- students dropdown -->
+        <!-- students dropdown
         <li class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown" href="#">Students<b class="caret"></b></a>
           <ul class="dropdown-menu" role="menu">
@@ -193,7 +184,8 @@
         </li>
 
         <li class="divider-vertical"></li>
-
+         end students dropdown --> 
+         
         <!-- instructors dropdown -->
         <li class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown" href="#">Instructors<b class="caret"></b></a>
